Fix table alignment

--- a/Frontend/src/app/pages/cesta-de-compras/cesta-de-compras.component.scss
+++ b/Frontend/src/app/pages/cesta-de-compras/cesta-de-compras.component.scss
@@ -10,10 +10,6 @@
   width: 200px !important;
 }
 
-.mat-column-nome {
-  width: 150px !important;
-}
-
 .mat-column-subtotal {
   width: 120px !important;
 }
