--- a/Frontend/src/app/pages/pedido/pedido.component.scss
+++ b/Frontend/src/app/pages/pedido/pedido.component.scss
@@ -3,17 +3,13 @@
 }
 
 .mat-column-valorUnitario {
-  width: 120px !important;
-}
-
-.mat-column-nome {
   width: 150px !important;
 }
 
 .mat-column-nome {
-  width: 150px !important;
+  width: 200px !important;
 }
 
 .mat-column-subtotal {
-  width: 95px !important;
+  width: 120px !important;
 }
